--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
+.vs/STDLite/v15/Server/sqlite3/db.lock
+.vs/STDLite/v15/Server/sqlite3/storage.ide
+.vs/STDLite/v15/Server/sqlite3/storage.ide-shm
+.vs/STDLite/v15/Server/sqlite3/storage.ide-wal
